[package]
name = "show-stock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
http_req = "0.9.0"
regex = "1.7.1"
serde = { version = "1.0.3", features = ["derive"] }
serde_json = "1.0.93"
tui = "0.19.0"
